syntax = "proto3";

package scalapb.zio_grpc;

message Request {
    enum Scenario {
        OK = 0;
        EMPTY_RESPONSE = 1; // return empty stream as response
        ERROR_NOW = 2; // fail with an error
        ERROR_AFTER = 3; // for server streaming, error after two responses
        DELAY = 4; // do not return a response. for testing cancellations
        DIE = 5; // fail
    }
    Scenario scenario = 1;
    int32 in = 2;
}

message Response {
    string out = 1;
}

service TestService {
    rpc Unary(Request) returns (Response);

    rpc ServerStreaming(Request) returns (stream Response);

    rpc ClientStreaming(stream Request) returns (Response);

    rpc BidiStreaming(stream Request) returns (stream Response);
}
